--- a/public/signup/index.html
+++ b/public/signup/index.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <form class="signup" onsubmit="signup()">
+      <h1>Create account</h1>
+
+      <input type="text" name="userName" placeholder="Name" required />
+      <input type="email" name="email" placeholder="Email" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <input
+        type="password"
+        name="confirmPassword"
+        placeholder="Confirm password"
+        required
+      />
+
+      <button type="submit">Sign up</button>
+
+      <div class="login-link">
+        Already have an account?
+        <a href="/login">Log in</a>
+      </div>
+    </form>
+    <script src="script.js"></script>
+  </body>
 </html>
