--- a/public/verify-email/index.html
+++ b/public/verify-email/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Verify Email</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="verify">
+      <h1>Verify your email</h1>
+
+      <p class="subtitle">
+        Hey <span id="user-name">John</span>, we sent a 4-digit code to
+        <span id="user-email">john@example.com</span>
+      </p>
+
+      <form class="otp-form">
+        <div class="otp-inputs">
+          <input type="text" inputmode="numeric" maxlength="1" />
+          <input type="text" inputmode="numeric" maxlength="1" />
+          <input type="text" inputmode="numeric" maxlength="1" />
+          <input type="text" inputmode="numeric" maxlength="1" />
+        </div>
+
+        <button type="submit">Verify</button>
+      </form>
+
+      <div class="resend">
+        Didn’t receive the code?
+        <button type="button">Resend</button>
+      </div>
+    </div>
+  </body>
 </html>
