--- a/public/login/index.html
+++ b/public/login/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form class="login">
+    <form class="login" onsubmit="login(event)">
       <h1>Welcome back</h1>
 
       <input
@@ -37,5 +37,6 @@
         <a href="/signup">Sign up</a>
       </div>
     </form>
+    <script src="script.js"></script>
   </body>
 </html>
