--- a/public/reset-password/index.html
+++ b/public/reset-password/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form class="reset">
+    <form class="reset" onsubmit="resetPassword(event)">
       <h1>Reset password</h1>
 
       <p class="subtitle">Enter a new password for your account.</p>
@@ -30,5 +30,6 @@
 
       <button type="submit">Reset password</button>
     </form>
+    <script src="script.js"></script>
   </body>
 </html>
