--- a/public/signup/index.html
+++ b/public/signup/index.html
@@ -7,16 +7,48 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form class="signup" onsubmit="signup()">
+    <p style="color: red; display: none" id="emailExists">
+      Email already registered
+    </p>
+    <p style="color: red; display: none" id="invalidInputs">
+      Please enter valid inputs
+    </p>
+    <p style="color: red; display: none" id="serverError">
+      There was an error at our end. Please try again later
+    </p>
+    <p style="color: springgreen; display: none" id="registrationSuccess">
+      You have successfully signed up. Navigating to verification of email
+      ......
+    </p>
+    <form class="signup" onsubmit="signup(event)">
       <h1>Create account</h1>
 
-      <input type="text" name="userName" placeholder="Name" required />
-      <input type="email" name="email" placeholder="Email" required />
-      <input type="password" name="password" placeholder="Password" required />
+      <input
+        type="text"
+        name="userName"
+        placeholder="Name"
+        id="name"
+        required
+      />
+      <input
+        type="email"
+        name="email"
+        placeholder="Email"
+        id="email"
+        required
+      />
+      <input
+        type="password"
+        name="password"
+        placeholder="Password"
+        id="password"
+        required
+      />
       <input
         type="password"
         name="confirmPassword"
         placeholder="Confirm password"
+        id="confirmPassword"
         required
       />
 
