--- a/public/verify-email/index.html
+++ b/public/verify-email/index.html
@@ -11,24 +11,24 @@
       <h1>Verify your email</h1>
 
       <p class="subtitle">
-        Hey <span id="user-name"></span>, we sent a 4-digit code to
-        <span id="user-email"></span>
+        Hey <span id="userName"></span>, we sent a 4-digit code to
+        <span id="userEmail"></span>
       </p>
 
       <form class="otp-form" onsubmit="verifyEmail(event)">
         <div class="otp-inputs">
-          <input type="text" inputmode="numeric" maxlength="1" />
-          <input type="text" inputmode="numeric" maxlength="1" />
-          <input type="text" inputmode="numeric" maxlength="1" />
-          <input type="text" inputmode="numeric" maxlength="1" />
+          <input id="code1" type="text" inputmode="numeric" maxlength="1" />
+          <input id="code2" type="text" inputmode="numeric" maxlength="1" />
+          <input id="code3" type="text" inputmode="numeric" maxlength="1" />
+          <input id="code4" type="text" inputmode="numeric" maxlength="1" />
         </div>
 
-        <button type="submit">Verify</button>
+        <button type="submit" id="verifyMailBtn">Verify</button>
       </form>
 
       <div class="resend">
         Didn’t receive the code?
-        <button type="button">Resend</button>
+        <button type="button" id="resendBtn">Resend</button>
       </div>
     </div>
     <script src="script.js"></script>
